Trying not to swear at the two individuals trying to drive behind me. I'm fixing a one line issue with the slider caption.

--- a/example/slider.css
+++ b/example/slider.css
@@ -319,3 +319,7 @@
     width: 100%;
     background-color: #000;
 }
+
+.slider-uninitialized > .slides > li > .caption {
+  display: none;
+}
